RESOLVED FIXED45645
Fix </sarcasm>
https://bugs.webkit.org/show_bug.cgi?id=45645
Summary Fix </sarcasm>
Adam Barth
Reported 2010-09-13 02:29:39 PDT
Fix </sarcasm>
Attachments
Patch (2.38 KB, patch)
2010-09-13 02:30 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-09-13 02:30:29 PDT
Darin Adler
Comment 2 2010-09-13 08:25:51 PDT
Comment on attachment 67383 [details] Patch Why was that there? Maybe I shouldn’t ask!
Jeremy Orlow
Comment 3 2010-09-13 08:58:11 PDT
Why are we removing this? It's in the official spec: http://dev.w3.org/html5/spec/Overview.html </sarcasm>
Dimitri Glazkov (Google)
Comment 4 2010-09-13 09:06:11 PDT
(In reply to comment #3) > Why are we removing this? It's in the official spec: http://dev.w3.org/html5/spec/Overview.html </sarcasm> You forgot the beginning <sarcasm> tag in your comment.
Jeremy Orlow
Comment 5 2010-09-13 09:22:57 PDT
(In reply to comment #4) > (In reply to comment #3) > > Why are we removing this? It's in the official spec: http://dev.w3.org/html5/spec/Overview.html </sarcasm> > > You forgot the beginning <sarcasm> tag in your comment. You need to read the spec more closely. Only the sarcasm end tag is in there. :-)
Eric Seidel (no email)
Comment 6 2010-09-13 09:55:03 PDT
It was a transliteration of the spec, which was intentionally left in as a test of the test suite. :) The test suite failed.
WebKit Commit Bot
Comment 7 2010-09-13 10:41:14 PDT
Comment on attachment 67383 [details] Patch Clearing flags on attachment: 67383 Committed r67396: <http://trac.webkit.org/changeset/67396>
WebKit Commit Bot
Comment 8 2010-09-13 10:41:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.