2010-09-13  Adam Barth  <abarth@webkit.org>

Reviewed by Darin Adler.

        Fix </sarcasm>
        https://bugs.webkit.org/show_bug.cgi?id=45645

        Test that </sarcasm> works properly.

        * html5lib/resources/webkit02.dat:
2010-09-13  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Fix </sarcasm>
        https://bugs.webkit.org/show_bug.cgi?id=45645

        Umm... Yeah.

        * html/parser/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processEndTagForInBody):

Canonical link: https://commits.webkit.org/58128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67396 268f45cc-cd09-0410-ab3c-d52691b4dbfc